--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ test:
   script:
     - FRMDB_RELEASE=0.0.1 docker-compose up -d db
     - cd be
-    - `npm test || :`
+    - npm test || true
     - FRMDB_STORAGE=postgres npm test
     - npm run start &
     - cd ..
@@ -64,5 +64,5 @@ cleanup:
   script:
     - docker-compose down
     - docker image prune --all -f
-    - `killall node --quiet || :`
+    - killall node --quiet || true
   when: always
