--- a/fe/package.json
+++ b/fe/package.json
@@ -35,9 +35,10 @@
     "@swimlane/ngx-charts": "^10.0.0",
     "@swimlane/ngx-graph": "^5.2.1",
     "@types/fuse": "^2.6.0",
-    "ag-grid-community": "^20.0.0",
     "ag-grid-angular": "^20.0.0",
+    "ag-grid-community": "^20.0.0",
     "ag-grid-enterprise": "^20.0.0",
+    "angular-gridster2": "^7.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
