Rollback ngx graph and charts as detailed in https://github.com/swimlane/ngx-graph/issues/105

--- a/fe/package.json
+++ b/fe/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "dev": "concurrently --kill-others \"ng serve --progress=false\" \"ng test --progress=false\" | perl -pe 's!^\\[\\d+\\] !!; s!ERROR in !!; s!^src/app/!fe/src/app/!'",
-    "start": "ng serve --proxy-config proxy.conf.json --source-map",
+    "start": "ng serve --aot --proxy-config proxy.conf.json --source-map",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -32,11 +32,11 @@
     "@ngrx/router-store": "^7.2.0",
     "@ngrx/store": "^7.2.0",
     "@ngrx/store-devtools": "^7.2.0",
-    "@swimlane/ngx-charts": "^10.0.0",
-    "@swimlane/ngx-graph": "^5.2.1",
+    "@swimlane/ngx-charts": "^8.1.0",
+    "@swimlane/ngx-graph": "^5.0.0",
     "@types/fuse": "^2.6.0",
-    "ag-grid-community": "^20.0.0",
     "ag-grid-angular": "^20.0.0",
+    "ag-grid-community": "^20.0.0",
     "ag-grid-enterprise": "^20.0.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.2",
