Use compose instead in js to start the DB

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prestart": "rm -rf dist && tsc --inlineSourceMap -p src",
     "start": "node dist/be/src/server.js",
-    "initpgdb": "node storage/bin/start_postgres.js"
+    "initpgdb": "docker-compose up -d db"
   },
   "dependencies": {
   },
