--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "initpgdb": "node storage/bin/start_postgres.js"
   },
   "dependencies": {
+    "circular-json": "^0.5.9"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
