--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "prestart": "rm -rf dist && tsc --inlineSourceMap -p src",
     "start": "node dist/be/src/server.js",
     "initpgdb": "node storage/bin/start_postgres.js",
-    "db": "docker-compose up -d db"
+    "db": "(docker rm -f formuladb-pg || true) && docker-compose up -d db"
   },
   "dependencies": {
     "circular-json": "^0.5.9"
