--- a/be/src/tsconfig.json
+++ b/be/src/tsconfig.json
@@ -9,11 +9,12 @@
             "@core/*": ["../../core/src/*"],
             "@storage/*": ["../../storage/src/*"],
 	        "@kv_selector_base/*": ["./*"]
-        }
+        },
+        "sourceMap": true
     },
     "include": [
         "./**/*",
         "../../core/src/**/*",
-        "../../storage/src/**/*",
+        "../../storage/src/**/*"
     ]
 }
