--- a/be/tsconfig.json
+++ b/be/tsconfig.json
@@ -8,7 +8,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "strictNullChecks": true,
-        "target": "ES2018",
+        "target": "es5",
         "typeRoots": [
             "node_modules/@types"
         ],
