--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,7 @@ test:
     - npm test || true
     - FRMDB_STORAGE=postgres npm test || true
     - npm run start &
+    - while ! nc -z localhost 4300 </dev/null; do echo "Waiting for BE ..."; sleep 1; done
     - cd ..
     - cd fe
     - npm run e2e
