canges for be prod image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,11 +17,12 @@ build:
     - cd fe && npm install
     - cd ..
     - cd be
-    - npm run compile
+    - npm run build-prod
     - docker build -t formuladb-be .
     - echo "TODO push to registry"
     - docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:0.0.1
     - docker push registry.gitlab.com/metawiz/febe/formuladb-be:0.0.1
+    - npm run compile
     - cd ..
     - cd fe
     - npm run build -- --prod --deploy-url=/formuladb/ --base-href=/formuladb/ --source-map
