--- a/be/Dockerfile
+++ b/be/Dockerfile
@@ -7,7 +7,7 @@ COPY package.json /package.json
 
 RUN npm install  --only=production
 
-COPY dist /dist
+COPY dist/be/src/server.js /dist/be/src/server.js
 COPY .env.prod /.env
 
 EXPOSE 3000
