--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -86,6 +86,13 @@
                 "ts-node/register"
             ],
             "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach to Remote BE",
+            "address": "127.0.0.1",
+            "port": 9229
         }
     ]
 }
