--- a/be/package.json
+++ b/be/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "e2e_serve": "rm -rf dist && tsc --inlineSourceMap -p src && concurrently --kill-others \"./node_modules/.bin/pouchdb-server --in-memory --port 5984\" \"sleep 15 && node dist/be/src/server.js\"",
-    "preserve": "rm -rf dist && tsc --inlineSourceMap -p src",
+    "e2e_serve": "rm -rf dist && tsc --sourceMap -p src && concurrently --kill-others \"./node_modules/.bin/pouchdb-server --in-memory --port 5984\" \"sleep 15 && node dist/be/src/server.js\"",
+    "preserve": "rm -rf dist && tsc --sourceMap -p src",
     "inspect": "kill-port 9231 && node --inspect=0.0.0.0:9231 dist/be/src/server.js",
     "nodemon-inspect": "nodemon --delay 100ms --watch dist --exec \"npm run inspect\"",
-    "serve": "concurrently --kill-others \"tsc --inlineSourceMap -w -p src\" \"sleep 40 && npm run nodemon-inspect\"",
+    "serve": "FRMDB_STORAGE=postgres concurrently --kill-others \"tsc --sourceMap -w -p src\" \"sleep 10 && npm run nodemon-inspect\"",
     "start": "node dist/be/src/server.js",
-    "compile": "tsc --inlineSourceMap -p src",
-    "compile:watch": "tsc --inlineSourceMap -w -p src",
+    "compile": "tsc --sourceMap -p src",
+    "compile:watch": "tsc --sourceMap -w -p src",
     "pretest": "npm run compile",
     "test": "node dist/be/src/tests/jasmine.js",
     "jasmine:watch": "watch \"node --inspect dist/be/src/tests/jasmine.js\" dist --wait=1 --interval=2",
