fix nginx conf for assets

--- a/fe/formuladb-nginx.conf
+++ b/fe/formuladb-nginx.conf
@@ -14,4 +14,9 @@ server {
     auth_basic_user_file    auth.htpasswd;
     try_files $uri $uri/ /formuladb/index.html;
   }
+  location /assets {
+    root /usr/share/nginx/html/formuladb;
+    auth_basic              "Restricted";
+    auth_basic_user_file    auth.htpasswd;
+  }
 }
