--- a/fe/angular.json
+++ b/fe/angular.json
@@ -15,8 +15,11 @@
       },
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path": "src/extra-webpack-prod.config.js"
+            },
             "outputPath": "dist/fe",
             "index": "src/index.html",
             "main": "src/main.ts",
