--- a/fe/package.json
+++ b/fe/package.json
@@ -57,7 +57,8 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular-builders/custom-webpack": "^7.4.2",
+    "@angular-devkit/build-angular": "^0.8.9",
     "@angular/cli": "~6.2.7",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
