--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,13 @@
 stages:
+  - npminstall
+  - buildprodimages
   - build
   - test
   - cleanup
   - videos
 
-build:
-  stage: build
+npminstall:
+  stage: npminstall
   script:
     - cd storage && npm install 
     - cd ..
@@ -23,21 +25,67 @@ build:
     - npm run build -- --prod --source-map
     - cd ..
     - docker build -t formuladb-sourcemaps -f Dockerfile.map .
-    - docker tag formuladb-sourcemaps registry.gitlab.com/metawiz/febe/formuladb-sourcemaps:0.0.1
-    - docker push registry.gitlab.com/metawiz/febe/formuladb-sourcemaps:0.0.1
+    - docker tag formuladb-sourcemaps registry.gitlab.com/metawiz/febe/formuladb-sourcemaps:0.0.2
+    - docker push registry.gitlab.com/metawiz/febe/formuladb-sourcemaps:0.0.2
     - cd be
     - docker build -t formuladb-be .
-    - docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:0.0.1
-    - docker push registry.gitlab.com/metawiz/febe/formuladb-be:0.0.1
+    - docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:0.0.2
+    - docker push registry.gitlab.com/metawiz/febe/formuladb-be:0.0.2
     - npm run compile
     - cd ..
     - cd fe
     - rm dist/fe/*.js.map
     - docker build -t formuladb-fe .
-    - docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:0.0.1
-    - docker push registry.gitlab.com/metawiz/febe/formuladb-fe:0.0.1
-  # Keep the cache to be reused in the test stage.
-  # use commit id as key, we don't want to reuse cache between succesive pipelines. Or ... ?
+    - docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:0.0.2
+    - docker push registry.gitlab.com/metawiz/febe/formuladb-fe:0.0.2
+  cache:
+    key: ${CI_COMMIT_SHORT_SHA}
+    paths:
+      - core/node_modules/
+      - storage/node_modules/
+      - be/node_modules/
+      - fe/node_modules/
+
+buildprodimages:
+  stage: buildprodimages
+  script:
+    - cd be
+    - npm run build-prod
+    - cd ../fe
+    - npm run build -- --prod --source-map
+    - cd ..
+    - docker build -t formuladb-sourcemaps -f Dockerfile.map .
+    - docker tag formuladb-sourcemaps registry.gitlab.com/metawiz/febe/formuladb-sourcemaps:${CI_COMMIT_TAG}
+    - docker push registry.gitlab.com/metawiz/febe/formuladb-sourcemaps:${CI_COMMIT_TAG}
+    - cd be
+    - docker build -t formuladb-be .
+    - docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:${CI_COMMIT_TAG}
+    - docker push registry.gitlab.com/metawiz/febe/formuladb-be:${CI_COMMIT_TAG}
+    - cd ../fe
+    - rm dist/fe/*.js.map
+    - docker build -t formuladb-fe .
+    - docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:${CI_COMMIT_TAG}
+    - docker push registry.gitlab.com/metawiz/febe/formuladb-fe:${CI_COMMIT_TAG}
+  cache:
+    key: ${CI_COMMIT_SHORT_SHA}
+    paths:
+      - core/node_modules/
+      - storage/node_modules/
+      - be/node_modules/
+      - fe/node_modules/
+  only:
+    - tags
+
+build
+  stage: build
+  script:
+    - npm run db
+    - cd be
+    - npm run compile
+    - cd ..
+    - cd fe
+    - npm run build
+    - cd ..
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
     paths:
@@ -46,11 +94,11 @@ build:
       - be/node_modules/
       - be/dist/
       - fe/node_modules/
-
+  
 test:
   stage: test
   script:
-    - FRMDB_RELEASE=0.0.1 docker-compose up -d db
+    - FRMDB_RELEASE=0.0.2 docker-compose up -d db
     - cd be
     - npm test
     - FRMDB_STORAGE=postgres npm test
