--- a/be/package.json
+++ b/be/package.json
@@ -7,7 +7,7 @@
     "preserve": "rm -rf dist && tsc --sourceMap -p src",
     "inspect": "kill-port 9231 && node --inspect=0.0.0.0:9231 dist/be/src/server.js",
     "nodemon-inspect": "nodemon --delay 100ms --watch dist --exec \"npm run inspect\"",
-    "serve": "FRMDB_STORAGE=postgres concurrently --kill-others \"tsc --sourceMap -w -p src\" \"sleep 10 && npm run nodemon-inspect\"",
+    "serve": "cross-env FRMDB_STORAGE=postgres concurrently --kill-others \"tsc --sourceMap -w -p src\" \"sleep 10 && npm run nodemon-inspect\"",
     "start": "node --inspect dist/be/src/server.js",
     "compile": "tsc --sourceMap -p src",
     "compile:watch": "tsc --sourceMap -w -p src",
@@ -24,6 +24,7 @@
     "cluster-key-slot": "^1.0.12",
     "concurrently": "^3.5.0",
     "cookie-parser": "~1.3.5",
+    "cross-env": "^5.2.0",
     "debug": "~2.2.0",
     "detect-node": "^2.0.4",
     "dotenv": "^6.2.0",
