--- a/fe/formuladb-nginx.conf
+++ b/fe/formuladb-nginx.conf
@@ -15,7 +15,7 @@ server {
     try_files $uri $uri/ /formuladb/index.html;
   }
   location /assets {
-    root /usr/share/nginx/html/formuladb;
+    proxy_pass http://minio:9000;
     auth_basic              "Restricted";
     auth_basic_user_file    auth.htpasswd;
   }
