--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       - $PWD/auth.htpasswd:/etc/nginx/auth.htpasswd
   minio:
-    image: minio/minio:RELEASE.2019-03-06T22-47-10Z
+    image: registry.gitlab.com/metawiz/febe/formuladb-minio:${FRMDB_RELEASE:-unknown_FRMDB_RELEASE}
     ports:
       - "9000:9000"
     environment:
@@ -34,6 +34,17 @@ services:
     command: minio server /data/
     volumes:
       - object-storage:/data
+  createbuckets:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc config host rm local;
+      /usr/bin/mc config host add local http://minio:9000 minio minio123;
+      /usr/bin/mc policy public local/assets;
+      exit 0;
+      "
 
 volumes:
   pg-persistence:
