--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,9 @@ npminstall:
 buildprodimages:
   stage: buildprodimages
   script:
+    - docker build -t formuladb-minio -f Dockerfile.minio .
+    - docker tag formuladb-minio registry.gitlab.com/metawiz/febe/formuladb-minio:${CI_COMMIT_TAG}
+    - docker push registry.gitlab.com/metawiz/febe/formuladb-minio:${CI_COMMIT_TAG}
     - cd be
     - npm run build-prod
     - cd ../fe
