--- a/fe/formuladb-nginx.conf
+++ b/fe/formuladb-nginx.conf
@@ -14,7 +14,7 @@ server {
     auth_basic_user_file    auth.htpasswd;
     try_files $uri $uri/ /formuladb/index.html;
   }
-  location /assets {
+  location /formuladb/assets {
     proxy_pass http://minio:9000;
     auth_basic              "Restricted";
     auth_basic_user_file    auth.htpasswd;
