--- a/fe/formuladb-nginx.conf
+++ b/fe/formuladb-nginx.conf
@@ -15,8 +15,6 @@ server {
     try_files $uri $uri/ /formuladb/index.html;
   }
   location /formuladb/assets {
-    proxy_pass http://minio:9000;
-    auth_basic              "Restricted";
-    auth_basic_user_file    auth.htpasswd;
+    proxy_pass http://minio:9000/assets/;
   }
 }
