Add extra tooling on FE image

--- a/fe/Dockerfile
+++ b/fe/Dockerfile
@@ -1,5 +1,8 @@
 FROM nginx:1.14
 
+RUN apt-get update && \
+  apt-get install -y net-tools vim procps inetutils-ping curl
+
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
