--- a/fe/formuladb-nginx.conf
+++ b/fe/formuladb-nginx.conf
@@ -14,7 +14,10 @@ server {
     auth_basic_user_file    auth.htpasswd;
     try_files $uri $uri/ /formuladb/index.html;
   }
+
   location /formuladb/assets {
-    proxy_pass http://minio:9000/assets/;
+    proxy_set_header    Authorization "";
+    rewrite             /formuladb/(.*) /$1  break;
+    proxy_pass          http://minio:9000/;
   }
 }
