--- a/fe/formuladb-nginx.conf
+++ b/fe/formuladb-nginx.conf
@@ -2,7 +2,7 @@ server {
   listen 8084 default_server;
   root /usr/share/nginx/html;
   index formuladb/index.html;
-  
+
   location /api {
     proxy_pass http://be:3000;
     auth_basic              "Restricted";
@@ -19,5 +19,10 @@ server {
     proxy_set_header    Authorization "";
     rewrite             /formuladb/(.*) /$1  break;
     proxy_pass          http://minio:9000/;
+  }
+
+  location /assets {
+    proxy_set_header    Authorization "";
+    proxy_pass          http://minio:9000/assets/;
   }
 }
