--- a/be/package.json
+++ b/be/package.json
@@ -63,7 +63,7 @@
     "rxjs-test": "^5.5.0-beta.0",
     "ts-node": "^3.3.0",
     "tsc-watch": "^1.0.16",
-    "typescript": "^2.8.3",
+    "typescript": "3.1.6",
     "uuid": "^3.2.1",
     "watch": "^1.0.2"
   },
