--- a/fe/package.json
+++ b/fe/package.json
@@ -15,81 +15,81 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.4",
-    "@angular/common": "^7.2.4",
-    "@angular/compiler": "^7.2.4",
-    "@angular/core": "^7.2.4",
-    "@angular/forms": "^7.2.4",
-    "@angular/http": "^7.2.4",
-    "@angular/platform-browser": "^7.2.4",
-    "@angular/platform-browser-dynamic": "^7.2.4",
-    "@angular/router": "^7.2.4",
+    "@angular/animations": "^7.2.9",
+    "@angular/common": "^7.2.9",
+    "@angular/compiler": "^7.2.9",
+    "@angular/core": "^7.2.9",
+    "@angular/forms": "^7.2.9",
+    "@angular/http": "^7.2.9",
+    "@angular/platform-browser": "^7.2.9",
+    "@angular/platform-browser-dynamic": "^7.2.9",
+    "@angular/router": "^7.2.9",
     "@fortawesome/angular-fontawesome": "^0.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.10",
-    "@fortawesome/free-solid-svg-icons": "^5.6.1",
-    "@ng-bootstrap/ng-bootstrap": "^3.0.0",
-    "@ngrx/effects": "^7.2.0",
-    "@ngrx/router-store": "^7.2.0",
-    "@ngrx/store": "^7.2.0",
-    "@ngrx/store-devtools": "^7.2.0",
-    "@swimlane/ngx-charts": "^10.0.0",
-    "@swimlane/ngx-graph": "^5.2.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
+    "@ngrx/effects": "^7.3.0",
+    "@ngrx/router-store": "^7.3.0",
+    "@ngrx/store": "^7.3.0",
+    "@ngrx/store-devtools": "^7.3.0",
+    "@swimlane/ngx-charts": "^10.1.0",
+    "@swimlane/ngx-graph": "^5.5.0",
     "@types/fuse": "^2.6.0",
-    "ag-grid-angular": "^20.0.0",
-    "ag-grid-community": "^20.0.0",
-    "ag-grid-enterprise": "^20.0.0",
+    "ag-grid-angular": "^20.1.0",
+    "ag-grid-community": "^20.1.0",
+    "ag-grid-enterprise": "^20.1.0",
     "angular-gridster2": "^7.1.0",
     "axios": "^0.18.0",
-    "bootstrap": "^4.1.2",
+    "bootstrap": "^4.3.1",
     "circular-json": "^0.5.9",
-    "core-js": "^2.5.4",
-    "d3": "^5.7.0",
-    "expression-eval": "^1.2.3",
-    "fuse.js": "^3.3.0",
+    "core-js": "^2.6.5",
+    "d3": "^5.9.1",
+    "expression-eval": "^2.0.0",
+    "fuse.js": "^3.4.4",
     "jquery": "^3.3.1",
     "jsep": "git+https://github.com/acristu/jsep.git",
-    "lodash": "^4.17.5",
-    "moment": "^2.22.2",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "ngx-take-until-destroy": "^5.4.0",
-    "pg": "^7.8.0",
-    "popper.js": "^1.14.3",
+    "pg": "^7.8.2",
+    "popper.js": "^1.14.7",
     "pouchdb-collate": "^7.0.0",
     "rxjs": "^6.4.0",
-    "short-uuid": "^3.0.0",
-    "tern": "^0.22.3",
-    "zone.js": "~0.8.26"
+    "short-uuid": "^3.1.0",
+    "tern": "^0.23.0",
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.7",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
-    "@ffmpeg-installer/ffmpeg": "^1.0.16",
-    "@google-cloud/text-to-speech": "^0.3.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/lodash": "^4.14.120",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.3.0",
-    "concurrently": "^3.6.1",
+    "@angular-devkit/build-angular": "~0.13.5",
+    "@angular/cli": "~7.3.5",
+    "@angular/compiler-cli": "^7.2.9",
+    "@angular/language-service": "^7.2.9",
+    "@ffmpeg-installer/ffmpeg": "^1.0.17",
+    "@google-cloud/text-to-speech": "^0.5.1",
+    "@types/jasmine": "~3.3.9",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/lodash": "^4.14.123",
+    "@types/node": "~11.11.3",
+    "codelyzer": "~4.5.0",
+    "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^7.0.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-marbles": "^0.3.1",
+    "jasmine-core": "~3.3.0",
+    "jasmine-marbles": "^0.4.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~4.0.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "karma-log-reporter": "0.0.4",
     "karma-spec-reporter": "0.0.32",
     "mp3-duration": "^1.1.0",
-    "protractor": "~5.4.0",
-    "shelljs": "^0.8.2",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "protractor": "~5.4.2",
+    "shelljs": "^0.8.3",
+    "ts-node": "~8.0.3",
+    "tslint": "~5.14.0",
+    "typescript": "3.1.6"
   }
 }
