--- a/storage/package.json
+++ b/storage/package.json
@@ -37,7 +37,7 @@
     "shelljs": "^0.8.3",
     "source-map-support": "^0.5.10",
     "ts-node": "^7.0.1",
-    "typescript": "^2.8.3"
+    "typescript": "3.1.6"
   },
   "_moduleAliases": {
     "@fe": "./dist"
