GCP persistent volumes are not empty (they start with a lost+found) ... we need to move from the root of the disk to an empty location

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     environment:
       MINIO_ACCESS_KEY: minio
       MINIO_SECRET_KEY: minio123
-    command: minio server /data/
+    command: minio server /data/minio/
     volumes:
       - object-storage:/data
   createbuckets:
