ugly home page working, using local assets

--- a/fe/angular.json
+++ b/fe/angular.json
@@ -17,8 +17,6 @@
         "build": {
           "builder": "@angular-builders/custom-webpack:browser",
           "options": {
-            "deployUrl": "/formuladb/",
-            "baseHref": "/formuladb/",
             "customWebpackConfig": {
               "path": "src/extra-webpack-prod.config.js"
             },
@@ -28,7 +26,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.png"
+              "src/favicon.png",
+              "src/assets"
             ],
             "styles": [
               "./node_modules/ag-grid-community/dist/styles/ag-grid.css",
@@ -100,7 +99,8 @@
               "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ],
             "assets": [
-              "src/favicon.png"
+              "src/favicon.png",
+              "src/assets"
             ]
           }
         },
