--- a/storage/package.json
+++ b/storage/package.json
@@ -17,6 +17,7 @@
     "jsep": "git+https://github.com/acristu/jsep.git",
     "lodash": "^4.17.11",
     "module-alias": "^2.1.0",
+    "moment": "^2.24.0",
     "pg": "^7.8.0",
     "pg-promise": "^8.5.5",
     "pouchdb-collate": "^7.0.0",
