added scalar functions evaluator to be used with conditionalFormatting rules

--- a/be/package.json
+++ b/be/package.json
@@ -30,10 +30,10 @@
     "dotenv": "^6.2.0",
     "express": "~4.13.1",
     "express-session": "^1.15.6",
-    "expression-eval": "git+https://github.com/acristu/expression-eval.git",
     "fuse.js": "^3.3.0",
     "glob": "^5.0.14",
     "jsep": "git+https://github.com/acristu/jsep.git",
+    "formulajs": "git+https://github.com/acristu/formula.js.git",
     "lodash": "^4.17.5",
     "module-alias": "^2.1.0",
     "moment": "^2.24.0",
