--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prestart": "rm -rf dist && tsc --inlineSourceMap -p src",
     "start": "node dist/be/src/server.js",
-    "db": "(docker rm -f formuladb-pg || true) && docker-compose up -d db",
+    "db": "(docker rm -f formuladb-pg || true) && docker-compose up -d db"
   },
   "dependencies": {
     "circular-json": "^0.5.9"
