--- a/fe/formuladb-nginx.conf
+++ b/fe/formuladb-nginx.conf
@@ -16,12 +16,16 @@ server {
   }
 
   location /formuladb/assets {
+    auth_basic              "Restricted";
+    auth_basic_user_file    auth.htpasswd;
     proxy_set_header    Authorization "";
     rewrite             /formuladb/(.*) /$1  break;
     proxy_pass          http://minio:9000/;
   }
 
   location /assets {
+    auth_basic              "Restricted";
+    auth_basic_user_file    auth.htpasswd;
     proxy_set_header    Authorization "";
     proxy_pass          http://minio:9000/assets/;
   }
