added default integrations directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - $PWD/auth.htpasswd:/etc/nginx/auth.htpasswd
   integ:
     build:
-      context: ../${FRMDB_DEPLOYMENT_DIR}/integ
+      context: ../${FRMDB_DEPLOYMENT_DIR:-febe}/integ
   minio:
     image: registry.gitlab.com/metawiz/febe/formuladb-minio:${FRMDB_RELEASE:-unknown_FRMDB_RELEASE}
     ports:
