added passportjs local auth

--- a/fe/formuladb-nginx.conf
+++ b/fe/formuladb-nginx.conf
@@ -1,3 +1,6 @@
+# env MINIO_HOSTPORT
+# set_by_lua $minio_hostport 'return os.getenv("MINIO_HOSTPORT") ? os.getenv("MINIO_HOSTPORT") : "minio:9000"';
+
 server {
   listen 8084 default_server;
   root /usr/share/nginx/html;
@@ -15,18 +18,15 @@ server {
     try_files $uri $uri/ /formuladb/index.html;
   }
 
-  location /formuladb/assets {
-    auth_basic              "Restricted";
-    auth_basic_user_file    auth.htpasswd;
-    proxy_set_header    Authorization "";
-    rewrite             /formuladb/(.*) /$1  break;
-    proxy_pass          http://minio:9000/;
-  }
+  # location ~ (/formuladb/assets|/assets) {
+  #   auth_basic              "Restricted";
+  #   auth_basic_user_file    auth.htpasswd;
+  #   try_files $uri $uri/ @assetsproxy;
+  # }
 
-  location /assets {
-    auth_basic              "Restricted";
-    auth_basic_user_file    auth.htpasswd;
-    proxy_set_header    Authorization "";
-    proxy_pass          http://minio:9000/assets/;
-  }
+  # location @assetsproxy {
+  #   proxy_set_header    Authorization "";
+  #   rewrite             /formuladb/(.*) /$1  break;
+  #   proxy_pass          http://$minio_hostport/;
+  # }
 }
