--- a/be/package.json
+++ b/be/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "e2e_serve": "rm -rf dist && tsc --sourceMap -p src && concurrently --kill-others \"./node_modules/.bin/pouchdb-server --in-memory --port 5984\" \"sleep 15 && node dist/be/src/server.js\"",
     "preserve": "rm -rf dist && tsc --sourceMap -p src",
-    "inspect": "kill-port 9231 && node --inspect=0.0.0.0:9231 dist/be/src/server.js && wait-on tcp:3000 && npm run test-data",
+    "inspect": "kill-port 9231 && concurrently \"node --inspect=0.0.0.0:9231 dist/be/src/server.js\" \"npm run test-data\" ",
     "nodemon-inspect": "nodemon --delay 200ms --watch dist --exec \"npm run inspect\"",
     "serve": "cross-env FRMDB_STORAGE=postgres concurrently --kill-others \"tsc --sourceMap -w -p src\" \"sleep 10 && npm run nodemon-inspect\"",
     "start": "node --inspect dist/be/src/server.js",
@@ -13,7 +13,8 @@
     "compile:watch": "tsc --sourceMap -w -p src",
     "pretest": "npm run compile",
     "test": "node dist/be/src/tests/jasmine.js",
-    "test-data": "node -e 'require(\"module-alias/register\"); require(\"@core/test/load_test_data.js\").loadTestData()'",
+    "TODOOO": "filter test|serve|compile|inspect tasks from Dockerfile, just to be on the safe side in production",
+    "test-data": "wait-on tcp:3000 && node -e 'require(\"module-alias/register\"); require(\"@core/test/load_test_data.js\").loadTestData()'",
     "exampleapps": "nodemon --delay 200ms --exec \"TBD generate json/csv for test data and metadata\" --watch ../core/src/test/mocks/ --watch ../core/src/domain/metadata/default-metadata.ts --watch ../core/src/domain/metadata/default-data.ts",
     "jasmine:watch": "watch \"node --inspect dist/be/src/tests/jasmine.js\" dist --wait=1 --interval=2",
     "test:watch": "concurrently --kill-others \"npm run compile -- -w\" \"sleep 2 && npm run jasmine:watch\" ",
@@ -25,6 +26,7 @@
     "body-parser": "~1.13.2",
     "cluster-key-slot": "^1.0.12",
     "concurrently": "^3.5.0",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "cross-env": "^5.2.0",
     "debug": "~2.2.0",
@@ -37,9 +39,12 @@
     "glob": "^5.0.14",
     "jsep": "git+https://github.com/acristu/jsep.git",
     "lodash": "^4.17.5",
+    "md5": "^2.2.1",
     "module-alias": "^2.1.0",
     "moment": "^2.24.0",
     "morgan": "^1.6.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.8.0",
     "pg-promise": "^8.5.5",
     "pouchdb-collate": "^7.0.0",
