--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,7 @@
 {
   "name": "formuladb-domain",
   "version": "1.0.0",
-  "description": "",
+  "description": "FormulaDB scalar functions",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,13 +12,16 @@
   "devDependencies": {
     "@types/jasmine": "^3.3.12",
     "@types/virtual-dom": "^2.1.0",
+    "acorn": "^6.1.1",
     "jasmine": "^3.0.0",
     "jasmine-spec-reporter": "^4.2.1",
     "typescript": "^3.4.5"
   },
   "dependencies": {
+    "formulajs": "git+https://github.com/acristu/formula.js.git",
     "jsep": "git+https://github.com/acristu/jsep.git",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "short-uuid": "^3.1.1"
   },
   "_moduleAliases": {
