--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -2,19 +2,34 @@
     "extends": "../tsconfig.json",
     "compileOnSave": false,
     "compilerOptions": {
+        "outDir": "./dist",
+        "baseUrl": ".",
+        "module": "commonjs",
         "sourceMap": false,
         "declaration": false,
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "strictNullChecks": true,
-        "target": "es2018",
+        "target": "ES2018",
         "typeRoots": [
             "node_modules/@types"
         ],
+        "paths": {
+            "*": [
+                "node_modules/*",
+            ],
+            "@domain/*": ["../domain/src/*"],
+            "@functions/*": ["../domain/src/*"]
+        },
         "lib": [
             "es2018",
             "dom"
         ]
-    }
+    },
+    "include": [
+        "../domain/src/**/*",
+        "../functions/src/**/*",
+        "src/**/*"
+    ]
 }
